--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,15 @@
             </instructions>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.10.4</version>
+          <configuration>
+            <additionalparam>-Xdoclint:none</additionalparam>
+            <quiet>true</quiet>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
