Additional package-info.java files and pom.xml modifications

--- a/dcm4che-soundex/pom.xml
+++ b/dcm4che-soundex/pom.xml
@@ -58,10 +58,10 @@
     </plugins>
   </build>
   <dependencies>
+    <!--  Should this be of scope test? -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
