--- a/dcm4che-karaf/pom.xml
+++ b/dcm4che-karaf/pom.xml
@@ -30,6 +30,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <inherited>false</inherited>
         <executions>
           <execution>
