--- a/dcm4che-tool/dcm4che-tool-findscu/pom.xml
+++ b/dcm4che-tool/dcm4che-tool-findscu/pom.xml
@@ -61,10 +61,16 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
+    <!-- The dependency appears twice in this pom file and also in the 
+         dcm4che-parent module.  Does it really want scope compile
+         instead of test.  If it appears in parent, should it be removd from 
+         here entirely. -->
+    <!-- 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>compile</scope>
     </dependency>
+    -->
   </dependencies>
 </project>
