--- a/pom.xml
+++ b/pom.xml
@@ -128,9 +128,42 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.10.4</version>
           <configuration>
+            <!--
+                 http://stackoverflow.com/questions/3084629/finding-the-root-directory-of-a-multi-module-maven-reactor-project?rq=1
+            -->
+            <overview>${session.executionRootDirectory}/src/main/javadoc/overview.html</overview>
             <additionalparam>-Xdoclint:none</additionalparam>
             <quiet>true</quiet>
+            <linksource>true</linksource>
+            <offlineLinks>
+              <offlineLink>
+                <!--
+                      I was unable to download package-list from the web for Apache Camel.
+                      This problem has been reported with many documents on javadoc.io
+                -->
+                <url>http://www.javadoc.io/doc/org.apache.camel/camel-core/2.18.3</url>
+                <location>${session.executionRootDirectory}/src/main/javadoc/camel/</location>
+              </offlineLink>
+              <offlineLink>
+                <url>http://www.slf4j.org/api/</url>
+                <location>${session.executionRootDirectory}/src/main/javadoc/slf4j</location>
+              </offlineLink>            
+            </offlineLinks>
           </configuration>
+        </plugin>
+        <plugin>
+          <!--
+                 Changed from maven-site-info-reports to
+                 maven-project-info-reports.
+          -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.9</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.6</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -186,6 +219,9 @@
     </repository>
   </repositories>
   <dependencyManagement>
+    <!--
+            http://stackoverflow.com/questions/6086774/maven-multi-module-aggregate-common-dependencies-in-a-single-one
+    -->
     <dependencies>
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
@@ -208,11 +244,14 @@
         <artifactId>javax.json</artifactId>
         <version>1.0.4</version>
       </dependency>
+      <!-- The junit artifact must be of scope compile
+           because it is found in the /src/main/java 
+           packages in dcm4che-tool-storescu -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
-        <scope>test</scope>
+        <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>commons-beanutils</groupId>
