Modification of pom.xml files
I tried reworking the pom.xml files to reduce number of warnings during
Maven build.

--- a/dcm4che-core/pom.xml
+++ b/dcm4che-core/pom.xml
@@ -59,6 +59,7 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-remote-resources-plugin</artifactId>
         <version>1.5</version>
         <executions>
@@ -225,6 +226,7 @@
       <artifactId>dcm4che-dict</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -234,6 +236,7 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
     </dependency>
+    -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
