--- a/dcm4che-conf/dcm4che-conf-core/pom.xml
+++ b/dcm4che-conf/dcm4che-conf-core/pom.xml
@@ -95,7 +95,9 @@
       <artifactId>guava</artifactId>
       <version>13.0.1</version>
     </dependency>
-
+    <!--  
+          Remove these dependencies since they are already included in
+          the parent
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -105,6 +107,7 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
     </dependency>
+    -->
 
     <dependency>
       <groupId>junit</groupId>
@@ -122,6 +125,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
