--- a/dcm4che-jboss-modules/pom.xml
+++ b/dcm4che-jboss-modules/pom.xml
@@ -133,7 +133,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.3</version>
+        <!--  <version>2.3</version> -->
         <executions>
           <execution>
             <id>${project.name}-bundles-assembly</id>
@@ -152,7 +152,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.3</version>
+        <!-- <version>2.3</version> -->
         <executions>
           <execution>
             <id>${project.name}-modules-assembly</id>
