--- a/dcm4che-js-dict/pom.xml
+++ b/dcm4che-js-dict/pom.xml
@@ -95,8 +95,9 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.3</version>
+        <!-- <version>2.3</version> -->
         <executions>
           <execution>
             <id>default</id>
