--- a/dcm4che-log/pom.xml
+++ b/dcm4che-log/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dcm4che-log</artifactId>
     <name>dcm4che-log</name>
     <packaging>jar</packaging>
-    <groupId>bradleyross</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>org.dcm4che</groupId>
+    <version>3.3.9-SNAPSHOT</version>
 </project>
 
