--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
             <failOnError>false</failOnError>
           </configuration>
         </plugin>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-assembly-plugin</artifactId>
+           <version>2.3</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -221,6 +226,16 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <dependencies>
+          <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+      </dependency>
+  </dependencies>
   <profiles>
       <profile>
           <id>csp</id>
